# flows.rs

./: .gitattributes  CHANGES.md  CITATION.cff  Cargo.toml  README.md  Rakefile  packages.json  packages.md
.cargo/: packages.json  packages.md
.readme/: README.md.j2
lib/: .gitignore
lib/flows/: Cargo.toml
lib/flows-arrow/: Cargo.toml  README.md
lib/flows-arrow/src/: concat_batches.rs  count_rows.rs  lib.rs  project_columns.rs  slice_rows.rs
lib/flows-audio/: Cargo.toml  README.md
lib/flows-datafusion/: Cargo.toml  README.md
lib/flows-datafusion/src/: avg_column.rs  lib.rs  max_column.rs  min_column.rs  sum_column.rs
lib/flows-derive/: Cargo.toml  README.md  examples.md.j2
lib/flows-derive/src/: block.rs  lib.rs  params.rs  type.rs
lib/flows-dns/: Cargo.toml  README.md
lib/flows-hash/: Cargo.toml  README.md
lib/flows-http/: Cargo.toml  README.md
lib/flows-http/src/: error.rs  lib.rs  request.rs
lib/flows-image/: Cargo.toml  README.md
lib/flows-io/: Cargo.toml  README.md
lib/flows-json/: Cargo.toml  README.md
lib/flows-json/src/: decode.rs  encode.rs  lib.rs
lib/flows-math/: Cargo.toml  README.md  examples.md.j2
lib/flows-math/src/: add.rs  lib.rs
lib/flows-mdns/: Cargo.toml  README.md
lib/flows-mdns/src/: lib.rs
lib/flows-pubsub/: Cargo.toml  README.md
lib/flows-rand/: Cargo.toml  README.md
lib/flows-text/: Cargo.toml  README.md  examples.md.j2
lib/flows-text/src/: lib.rs  split.rs
lib/flows-video/: Cargo.toml  README.md
lib/flows/src/: lib.rs
