# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = [
    "lib/flows",
    "lib/flows-audio",
    "lib/flows-derive",
    "lib/flows-hash",
    "lib/flows-image",
    "lib/flows-io",
    "lib/flows-json",
    "lib/flows-math",
    "lib/flows-rand",
    "lib/flows-text"
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "Building blocks for flow-based programming (FBP) in Rust."
#documentation = "https://docs.rs/flows"
readme = true
homepage = "https://flows.rs"
repository = "https://github.com/artob/flows.rs"
license = "Unlicense"
keywords = ["fbp", "flow", "dataflow"]
categories = []
publish = true

[workspace.dependencies]
flows = "0.0.1"
flows-audio = "0.0.1"
flows-derive = "0.0.1"
flows-hash = "0.0.1"
flows-image = "0.0.1"
flows-io = "0.0.1"
flows-json = "0.0.1"
flows-math = "0.0.1"
flows-rand = "0.0.1"
flows-text = "0.0.1"

#async-flow = { version = "0", default-features = false, features = ["tokio"] }
async-flow = { version = "0", default-features = false, features = [] }

[patch.crates-io]
flows = { path = "lib/flows" }
flows-audio = { path = "lib/flows-audio" }
flows-derive = { path = "lib/flows-derive" }
flows-hash = { path = "lib/flows-hash" }
flows-image = { path = "lib/flows-image" }
flows-io = { path = "lib/flows-io" }
flows-json = { path = "lib/flows-json" }
flows-math = { path = "lib/flows-math" }
flows-rand = { path = "lib/flows-rand" }
flows-text = { path = "lib/flows-text" }
