# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = [
    "lib/flows",
    "lib/flows-arrow",
    "lib/flows-audio",
    "lib/flows-datafusion",
    "lib/flows-derive",
    "lib/flows-hash",
    "lib/flows-image",
    "lib/flows-io",
    "lib/flows-json",
    "lib/flows-math",
    "lib/flows-rand",
    "lib/flows-text"
]
resolver = "2"

[workspace.package]
version = "0.0.2"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "Building blocks for flow-based programming (FBP)."
#documentation = "https://docs.rs/flows"
readme = true
homepage = "https://flows.rs"
repository = "https://github.com/artob/flows.rs"
license = "Unlicense"
keywords = ["fbp", "flow", "dataflow", "async"]
categories = ["asynchronous", "concurrency", "network-programming", "no-std"]
publish = true

[workspace.dependencies]
flows = { version = "0.0.2", default-features = false }
flows-arrow = { version = "0.0.2", default-features = false }
flows-audio = { version = "0.0.2", default-features = false }
flows-datafusion = { version = "0.0.2", default-features = false }
flows-derive = { version = "0.0.2", default-features = false }
flows-hash = { version = "0.0.2", default-features = false }
flows-image = { version = "0.0.2", default-features = false }
flows-io = { version = "0.0.2", default-features = false }
flows-json = { version = "0.0.2", default-features = false }
flows-math = { version = "0.0.2", default-features = false }
flows-rand = { version = "0.0.2", default-features = false }
flows-text = { version = "0.0.2", default-features = false }

async-flow = { version = "0.1.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.49", default-features = false, features = ["macros", "rt", "sync"] }

[patch.crates-io]
#async-flow = { git = "https://github.com/artob/async-flow.git" }
#async-flow = { path = "lib/async-flow" }
flows = { path = "lib/flows" }
flows-arrow = { path = "lib/flows-arrow" }
flows-audio = { path = "lib/flows-audio" }
flows-datafusion = { path = "lib/flows-datafusion" }
flows-derive = { path = "lib/flows-derive" }
flows-hash = { path = "lib/flows-hash" }
flows-image = { path = "lib/flows-image" }
flows-io = { path = "lib/flows-io" }
flows-json = { path = "lib/flows-json" }
flows-math = { path = "lib/flows-math" }
flows-rand = { path = "lib/flows-rand" }
flows-text = { path = "lib/flows-text" }
