# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows-audio"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Building blocks for flow-based audio processing."
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "Flows.rs: Audio Processing"

[features]
default = ["all", "std"]
all = []
std = ["async-flow/std"]
unstable = []

[dependencies]
async-flow.workspace = true
symphonia = { version = "0.5", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
