# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows-datafusion"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Building blocks for flow-based query processing with Apache DataFusion."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "Flows.rs: Query Processing with Apache DataFusion"

[features]
default = ["all", "std"]
all = []
std = ["async-flow/std"]
unstable = []

[dependencies]
arrow-arith = { version = "57.2", default-features = false }
arrow-array = { version = "57.2", default-features = false }
arrow-schema = { version = "57.2", default-features = false }
async-flow.workspace = true
datafusion-common = { version = "52", default-features = false }
flows-arrow.workspace = true
tokio.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]

[dev-dependencies]
tokio.workspace = true
