# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Derive macros for flow-based programming (FBP)."
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "Flows.rs: Derive Macros"

[features]
default = ["all", "std"]
all = []
std = ["async-flow/std"]
unstable = []

[dependencies]
async-flow.workspace = true
darling = { version = "0.23", default-features = false }
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]

[lib]
proc-macro = true
