# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows-hash"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Building blocks for flow-based cryptographic hashing."
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "Flows.rs: Cryptographic Hashing"

[features]
default = ["all", "std"]
all = []
std = ["async-flow/std"]
unstable = []

# Functions:
blake3 = []
md5 = ["dep:md-5"]
sha1 = ["dep:sha1"]
sha2 = ["dep:sha2"]

[dependencies]
async-flow.workspace = true

# Functions:
md-5 = { version = "0.10", default-features = false, optional = true }
sha1 = { version = "0.10", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
