# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Building blocks for flow-based HTTP clients & servers."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["http1"]
std = ["async-flow/std"]
unstable = ["http2"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2", "tls"]
tls = ["rustls"]
rustls = []

[dependencies]
async-flow.workspace = true
http = { version = "1.4", default-features = false }
hyper = { version = "1", default-features = false, features = ["client"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["net"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
