# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Building blocks for flow-based HTTP requests & responses."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "Flows.rs: HTTP Requests & Responses"

[features]
default = ["all", "std"]
all = ["http1", "http2"]
std = ["async-flow/std"]
unstable = []

# Features:
http1 = ["hyper/http1", "hyper-rustls?/http1", "hyper-util/http1"]
http2 = ["hyper/http2", "hyper-rustls?/http2", "hyper-util/http2", "tls"]
tls = ["rustls"]
rustls = ["dep:hyper-rustls", "dep:rustls", "dep:rustls-platform-verifier"]

[dependencies]
async-flow.workspace = true
http = { version = "1.4", default-features = false }
hyper = { version = "1", default-features = false, features = ["client"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["net"] }

# Features:
hyper-rustls = { version = "0.27", default-features = false, optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
rustls-platform-verifier = { version = "0.5", default-features = false, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
