# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows-json"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Building blocks for flow-based JSON encoding & decoding."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "Flows.rs: JSON Encoding & Decoding"

[features]
default = ["all", "std"]
all = []
std = ["async-flow/std", "serde_json/std"]
unstable = []

[dependencies]
async-flow = { workspace = true, features = ["serde"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
