# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows-rand"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Building blocks for flow-based random number generation."
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "Flows.rs: Random Number Generation"

[features]
default = ["all", "std"]
all = []
std = ["async-flow/std", "getrandom/std"]
unstable = []

[dependencies]
async-flow.workspace = true
flows-derive.workspace = true
getrandom = { version = "0.3", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
