# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows-video"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Building blocks for flow-based video processing."
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "Flows.rs: Video Processing"

[features]
default = ["all", "std"]
all = []
std = ["async-flow/std"]
unstable = []

# Codecs:
av1 = ["dep:rav1e"]

[dependencies]
async-flow.workspace = true

# Codecs:
rav1e = { version = "0.8", default-features = false, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
