# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Building blocks for flow-based programming (FBP)."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "Flows.rs"

[features]
default = ["all", "std"]
all = [
    "arrow",
    "audio",
    "datafusion",
    "derive",
    "hash",
    "http",
    "image",
    "io",
    "json",
    "math",
    "rand",
    "text",
]
std = [
    "async-flow/std",
    "flows-arrow?/std",
    "flows-audio?/std",
    "flows-datafusion?/std",
    "flows-derive?/std",
    "flows-hash?/std",
    "flows-http?/std",
    "flows-image?/std",
    "flows-io?/std",
    "flows-json?/std",
    "flows-math?/std",
    "flows-rand?/std",
    "flows-text?/std",
]
unstable = []

# Crates:
arrow = ["dep:flows-arrow"]
audio = ["dep:flows-audio"]
datafusion = ["dep:flows-datafusion"]
derive = ["dep:flows-derive"]
hash = ["dep:flows-hash"]
http = ["dep:flows-http"]
image = ["dep:flows-image"]
io = ["dep:flows-io"]
json = ["dep:flows-json"]
math = ["dep:flows-math"]
rand = ["dep:flows-rand"]
text = ["dep:flows-text"]

# Integrations:
serde = []

[dependencies]
async-flow.workspace = true
flows-arrow = { workspace = true, features = ["all"], optional = true }
flows-audio = { workspace = true, features = ["all"], optional = true }
flows-datafusion = { workspace = true, features = ["all"], optional = true }
flows-derive = { workspace = true, features = ["all"], optional = true }
flows-hash = { workspace = true, features = ["all"], optional = true }
flows-http = { workspace = true, features = ["all"], optional = true }
flows-image = { workspace = true, features = ["all"], optional = true }
flows-io = { workspace = true, features = ["all"], optional = true }
flows-json = { workspace = true, features = ["all"], optional = true }
flows-math = { workspace = true, features = ["all"], optional = true }
flows-rand = { workspace = true, features = ["all"], optional = true }
flows-text = { workspace = true, features = ["all"], optional = true }

[dev-dependencies]
tokio.workspace = true
