# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flows"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Building blocks for flow-based programming (FBP)."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "Flows.rs"

[features]
default = ["all", "std"]
all = [
    "arrow",
    "audio",
    "datafusion",
    "derive",
    "dns",
    "hash",
    "http",
    "image",
    "io",
    "json",
    "math",
    "mdns",
    "pubsub",
    "rand",
    "text",
    "video",
]
std = [
    "async-flow/std",
    "flows-arrow?/std",
    "flows-audio?/std",
    "flows-datafusion?/std",
    "flows-derive?/std",
    "flows-dns?/std",
    "flows-hash?/std",
    "flows-http?/std",
    "flows-image?/std",
    "flows-io?/std",
    "flows-json?/std",
    "flows-math?/std",
    "flows-mdns?/std",
    "flows-pubsub?/std",
    "flows-rand?/std",
    "flows-text?/std",
    "flows-video?/std",
]
unstable = []

# Crates:
arrow = ["dep:flows-arrow"]
audio = ["dep:flows-audio"]
datafusion = ["dep:flows-datafusion"]
derive = ["dep:flows-derive"]
dns = ["dep:flows-dns"]
hash = ["dep:flows-hash"]
http = ["dep:flows-http"]
image = ["dep:flows-image"]
io = ["dep:flows-io"]
json = ["dep:flows-json"]
math = ["dep:flows-math"]
mdns = ["dep:flows-mdns"]
pubsub = ["dep:flows-pubsub"]
rand = ["dep:flows-rand"]
text = ["dep:flows-text"]
video = ["dep:flows-video"]

# Integrations:
serde = []

[dependencies]
async-flow.workspace = true
flows-arrow = { workspace = true, features = ["all"], optional = true }
flows-audio = { workspace = true, features = ["all"], optional = true }
flows-datafusion = { workspace = true, features = ["all"], optional = true }
flows-derive = { workspace = true, features = ["all"], optional = true }
flows-dns = { workspace = true, features = ["all"], optional = true }
flows-hash = { workspace = true, features = ["all"], optional = true }
flows-http = { workspace = true, features = ["all"], optional = true }
flows-image = { workspace = true, features = ["all"], optional = true }
flows-io = { workspace = true, features = ["all"], optional = true }
flows-json = { workspace = true, features = ["all"], optional = true }
flows-math = { workspace = true, features = ["all"], optional = true }
flows-mdns = { workspace = true, features = ["all"], optional = true }
flows-pubsub = { workspace = true, features = ["all"], optional = true }
flows-rand = { workspace = true, features = ["all"], optional = true }
flows-text = { workspace = true, features = ["all"], optional = true }
flows-video = { workspace = true, features = ["all"], optional = true }

[dev-dependencies]
tokio.workspace = true
